# algotrader

./: Cargo.toml
src/: bitpanda.rs  lib.rs  main.rs  types.rs
