[package]
name = "algotrader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
async-trait = "0.1"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
strum_macros = "*"
strum = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
rust_decimal = { version = "*", features = ["serde-str"] }
rust_decimal_macros = "*"
tokio = "*"