[package]
name = "algotrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
chrono = { version = "*", features = ["serde"] }
hashbrown = "*"
reqwest = { version = "*", features = ["json"] }
rust_decimal = { version = "*", features = ["serde-str"] }
rust_decimal_macros = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
strum = { version = "*", features = ["derive"] }
strum_macros = "*"
tokio = {version = "*", features = ["macros", "rt"] }
